--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ button {
 </script>
 </head>
 
-<body bgcolor="black"><center><br><br><br><a href="index.html"><img src="YVVvko.png"></a><Br><br><Br>
+<body bgcolor="black"><center><br><br><br><a href=""><img src="YVVvko.png"></a><Br><br><Br>
 <div style="float:center;">
 <textarea type="text" id="description"></textarea></div><br><br>
 <button onClick="reply_click(this.innerHTML)" type="button" id="choiceA"></button>&nbsp;<object style='color:white; font-size:21px;'>OR</object>&nbsp;<button onClick="reply_click(this.innerHTML)" type="button" id="choiceB"></button><br><br>
