Included header title

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html><link rel="icon" type="image/png" href="favicon.png"><title>Droozle</title><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="description" content="Droozle is a game in which user has to choose between two different answers">
+<html><link rel="icon" type="image/png" href="favicon.png"><title>Droozle - Αυτό ή Εκείνο?</title><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="description" content="Droozle is a game in which user has to choose between two different answers">
 <meta name="keywords" content="droozle, or game, the or game, conjuction, questions, answers, or questions">
 <link rel="icon" type="image/png" href="hL9TVL.png">
 <head>
@@ -137,7 +137,7 @@ button {
 <body bgcolor="black"><center><br><br><br><a href=""><img src="YVVvko.png"></a><Br><br><Br>
 <div style="float:center;">
 <textarea type="text" id="description"></textarea></div><br><br>
-<button onClick="reply_click(this.innerHTML)" type="button" id="choiceA"></button>&nbsp;<object style='color:white; font-size:21px;'>OR</object>&nbsp;<button onClick="reply_click(this.innerHTML)" type="button" id="choiceB"></button><br><br>
+<button onClick="reply_click(this.innerHTML)" type="button" id="choiceA"></button>&nbsp;<object style='color:white; font-size:21px;'>ή</object>&nbsp;<button onClick="reply_click(this.innerHTML)" type="button" id="choiceB"></button><br><br>
 <input type='number' id='score' value="0" style="width:80%; font-size:21px; background: #fff;" disabled/><br><br><br>
 </center>
 </script>
