--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <body bgcolor="black"><center><br><br><br><a href=""><img src="YVVvko.png"></a><Br><br><Br>
 <div style="float:center;">
 <textarea type="text" id="description"></textarea></div><br><br>
-<button onClick="reply_click(this.innerHTML)" type="button" id="choiceA"></button>&nbsp;<object style='color:white; font-size:21px;'>ή</object>&nbsp;<button onClick="reply_click(this.innerHTML)" type="button" id="choiceB"></button><br><br>
-<input type='number' id='score' value="0" style="width:80%; font-size:21px; background: #fff;" disabled/><br><br><br>
+<button onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceA"></button>&nbsp;<object style='color:white; font-size:21px;'>ή</object>&nbsp;<button onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceB"></button><br><br>
+<input type='number' id='score' value="0" style="width:80%; font-size:21px; background: #fff;" disabled/>
+<input type='hidden' name='questions' id='questions' value='0'><br><br><br>
 </center>
 </script>
 
