--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body bgcolor="black"><center><br><br><br><a href=""><img src="YVVvko.png"></a><Br><br><Br>
+<body bgcolor="black"><center><br><br><br><a href=""><img src="YVVvko.png"></a><Br><br>
 <div style="float:center;">
 <textarea type="text" id="description" style="background-color:white;" disabled></textarea></div><br>
 <button onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceA"></button>&nbsp;<object style='color:white; font-size:21px;'>ή</object>&nbsp;<button style='margin-top:7px;' onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceB"></button><br><br>
 <input type='text' id='score' value="0" style="width:80%; background: #fff;" disabled/>
-<input type='hidden' name='questions' id='questions' value='0'><br><br><br>
+<input type='hidden' name='questions' id='questions' value='0'><br><br>
 </center>
 </script>
 
