Added line break in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body bgcolor="black"><center><br><br><br><a href=""><img src="YVVvko.png"></a><Br><br><Br>
+<body bgcolor="black"><center><br><br><a href=""><img src="YVVvko.png"></a><Br><br><Br>
 <div style="float:center;">
 <textarea type="text" id="description" style="background-color:white;" disabled></textarea></div><br>
 <button onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceA"></button>&nbsp;<object style='color:white; font-size:21px;'>ή</object>&nbsp;<button style='margin-top:7px;' onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceB"></button><br><br>
