Removede line breaks in index.html

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body bgcolor="black"><center><br><br><a href=""><img src="YVVvko.png"></a><Br><br>
+<body bgcolor="black"><center><br><br><a href=""><img src="YVVvko.png"></a>
 <div style="float:center;">
 <textarea type="text" id="description" style="background-color:white;" disabled></textarea></div><br>
-<button onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceA"></button><br><button style='margin-top:7px;' onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceB"></button><br><br>
+<button onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceA"></button><br><button style='margin-top:7px;' onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceB"></button>
 <input type='text' id='score' value="0.00000" style="width:90%; background: #fff;" disabled/>
-<input type='hidden' name='questions' id='questions' value='0'><br><br><br>
+<input type='hidden' name='questions' id='questions' value='0'>
 </center>
-</script>
+</body>
 
 </html>
