--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta name="keywords" content="droozle, or game, the or game, conjuction, questions, answers, or questions">
 <meta name="viewport" content="width=device-width, height=device-height,  initial-scale=1.0, user-scalable=no, user-scalable=0"/>
 <meta name="robots" content="noindex">
-<link rel="icon" type="image/png" href="mY59Gf.png">
+<link rel="icon" type="image/png" href="mY59Gf.png?v=2">
 <head>
 <script src="jquery/jquery-1.7.2.min.js" type="text/javascript"></script>
 <script src="javascript/loadXML.js" type="text/javascript"></script>
