Set base64 representation of image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,118 @@
 <meta name="viewport" content="width=device-width, height=device-height,  initial-scale=1.0, user-scalable=no, user-scalable=0"/>
 <meta name="robots" content="noindex">
 <link rel="icon" type="image/png" href="mY59Gf.png?v=2">
+<link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAAGsAAABPCAYAAADsgjssAAAKpWlDQ1BJQ0MgUHJvZmlsZQAASImV
+lwdUU1kax+976Y0WCEVK6E16B+k1dOkgKiGBEEoMgYAiNmRQgRFFRAQURUdAFBwLIGNBRLENAgrY
+B2RQUcbBAqiozAOWsLN7dvfsP+c773f+777vfu/m3nO+BwD5BpPPT4YlAEjhpQuCPF3oEZFRdNwI
+gJAfEagCGSYrje8cGOgLEC1c/67JfmQsonsGs7n+/f5/lSQ7Lo0FABSIcCw7jZWC8FkkTrH4gnQA
+UGzEV89M58/ydoSlBUiBCFfOMmeeT81y7Dx3zI0JCXJF+AEAeDKTKeAAQPod8ekZLA6Sh4xG2JjH
+5vIQNkfYgZXAROYhI/fA0pSUNbN8CGGd2H/Kw/lbzlhRTiaTI+L5d5kT3o2bxk9mrvs/l+N/KyVZ
+uDCHGhLkBIFX0Ox8yJrVJq3xETEv1j9ggbns+ZpmOUHoFbrArDTXqAVmM918FliYFOq8wEzB4rPc
+dEbIAgvWBIny85L9fUX54xgijktzD17geK4HY4GzEkLCFziDG+a/wGlJwT6LY1xFvkAYJKo5XuAh
+eseUtMXaWMzFudITQrwWa4gQ1cOOc3MX+bxQ0Xh+uosoJz85cLH+ZE+Rn5YRLHo2HdlgC5zI9A5c
+zBMoWh/ABX6ACVjpcWtn9xVwXcNfJ+ByEtLpzsgpiaMzeCzDpXRTY1MTAGbP3Pxf+oE2d5Yg2q1F
+L7UNAJt8xOQsekx1AM6/AIA6ueipv0e2wy4ALnazhIKMeW92qwMMcpLFgTSQB8pAHegAA2AKLIEd
+cALuwBsEgBAQCVYBFkgAKUAAMkE22ALyQAHYBfaCclAFjoBacBKcBs3gArgCroPboBv0gcdgEIyA
+N2AcTIJpCIJwEAWiQvKQCqQJ6UOmkDXkALlDvlAQFAnFQByIBwmhbGgrVAAVQ+XQYagO+hk6D12B
+bkI90ENoCBqF3kNfYBRMhqVhJVgLNoKtYWfYBw6BV8IcOBXOgnPhnXAZXA2fgJvgK/BtuA8ehN/A
+EyiAIqFoKFWUAcoa5YoKQEWh4lEC1EZUPqoUVY1qQLWiOlH3UIOoMdRnNBZNRdPRBmg7tBc6FM1C
+p6I3ogvR5ehadBO6A30PPYQeR3/HUDCKGH2MLYaBicBwMJmYPEwp5hjmHOYapg8zgpnEYrE0rDbW
+CuuFjcQmYtdjC7EHsI3YNmwPdhg7gcPh5HH6OHtcAI6JS8fl4fbjTuAu43pxI7hPeBJeBW+K98BH
+4Xn4HHwp/jj+Er4X/xI/TZAgaBJsCQEENmEdoYhwlNBKuEsYIUwTJYnaRHtiCDGRuIVYRmwgXiM+
+IX4gkUhqJBvSchKXtJlURjpFukEaIn0mS5H1yK7kaLKQvJNcQ24jPyR/oFAoWhQnShQlnbKTUke5
+SnlG+SRGFTMUY4ixxTaJVYg1ifWKvRUniGuKO4uvEs8SLxU/I35XfEyCIKEl4SrBlNgoUSFxXmJA
+YkKSKmkiGSCZIlkoeVzypuQrKZyUlpS7FFsqV+qI1FWpYSqKqk51pbKoW6lHqdeoI9JYaW1phnSi
+dIH0Seku6XEZKRlzmTCZtTIVMhdlBmkomhaNQUumFdFO0/ppX2SVZJ1l42R3yDbI9spOyS2Rc5KL
+k8uXa5Trk/siT5d3l0+S3y3fLP9UAa2gp7BcIVPhoMI1hbEl0kvslrCW5C85veSRIqyopxikuF7x
+iOIdxQklZSVPJb7SfqWrSmPKNGUn5UTlEuVLyqMqVBUHFa5Kicplldd0GbozPZleRu+gj6sqqnqp
+ClUPq3apTqtpq4Wq5ag1qj1VJ6pbq8erl6i3q49rqGj4aWRr1Gs80iRoWmsmaO7T7NSc0tLWCtfa
+ptWs9UpbTpuhnaVdr/1Eh6LjqJOqU61zXxera62bpHtAt1sP1rPQS9Cr0LurD+tb6nP1D+j3LMUs
+tVnKW1q9dMCAbOBskGFQbzBkSDP0NcwxbDZ8a6RhFGW026jT6LuxhXGy8VHjxyZSJt4mOSatJu9N
+9UxZphWm980oZh5mm8xazN6Z65vHmR80f2BBtfCz2GbRbvHN0spSYNlgOWqlYRVjVWk1YC1tHWhd
+aH3DBmPjYrPJ5oLNZ1tL23Tb07Z/2hnYJdkdt3u1THtZ3LKjy4bt1eyZ9oftBx3oDjEOhxwGHVUd
+mY7Vjs+d1J3YTsecXjrrOic6n3B+62LsInA55zLlauu6wbXNDeXm6Zbv1uUu5R7qXu7+zEPNg+NR
+7zHuaeG53rPNC+Pl47Xba4ChxGAx6hjj3lbeG7w7fMg+wT7lPs999XwFvq1+sJ+33x6/J/6a/jz/
+5gAQwAjYE/A0UDswNfCX5djlgcsrlr8IMgnKDuoMpgavDj4ePBniElIU8jhUJ1QY2h4mHhYdVhc2
+Fe4WXhw+GGEUsSHidqRCJDeyJQoXFRZ1LGpihfuKvStGoi2i86L7V2qvXLvy5iqFVcmrLq4WX81c
+fSYGExMeczzmKzOAWc2ciGXEVsaOs1xZ+1hv2E7sEvZonH1ccdzLePv44vhXHHvOHs5ogmNCacIY
+15Vbzn2X6JVYlTiVFJBUkzSTHJ7cmIJPiUk5z5PiJfE61iivWbumh6/Pz+MPptqm7k0dF/gIjqVB
+aSvTWtKlkebmjlBH+INwKMMhoyLjU2ZY5pm1kmt5a++s01u3Y93LLI+sn9aj17PWt2erZm/JHtrg
+vOHwRmhj7Mb2TeqbcjeNbPbcXLuFuCVpy685xjnFOR+3hm9tzVXK3Zw7/IPnD/V5YnmCvIFtdtuq
+tqO3c7d37TDbsX/H93x2/q0C44LSgq+FrMJbP5r8WPbjzM74nV1FlkUHd2F38Xb173bcXVssWZxV
+PLzHb09TCb0kv+Tj3tV7b5aal1btI+4T7hss8y1r2a+xf9f+r+UJ5X0VLhWNlYqVOyqnDrAP9B50
+OthQpVRVUPXlEPfQg8Oeh5uqtapLj2CPZBx5cTTsaOdP1j/VHVM4VnDsWw2vZrA2qLajzqqu7rji
+8aJ6uF5YP3oi+kT3SbeTLQ0GDYcbaY0Fp8Ap4anXP8f83H/a53T7GeszDWc1z1aeo57Lb4Ka1jWN
+Nyc0D7ZEtvSc9z7f3mrXeu4Xw19qLqheqLgoc7HoEvFS7qWZy1mXJ9r4bWNXOFeG21e3P74acfV+
+x/KOrms+125c97h+tdO58/IN+xsXbtrePH/L+lbzbcvbTXcs7pz71eLXc12WXU13re62dNt0t/Ys
+67nU69h75Z7bvev3Gfdv9/n39fSH9j8YiB4YfMB+8Oph8sN3jzIeTT/e/ATzJP+pxNPSZ4rPqn/T
+/a1x0HLw4pDb0J3nwc8fD7OG3/ye9vvXkdwXlBelL1Ve1r0yfXVh1GO0+/WK1yNv+G+mx/L+kPyj
+8q3O27N/Ov15ZzxifOSd4N3M+8IP8h9qPpp/bJ8InHg2mTI5PZX/Sf5T7Wfrz51fwr+8nM78ivta
+9k33W+t3n+9PZlJmZvhMAXOuFUAhAcfHA/C+BgBKJNI7dANAFJvviecEzffxcwT+E8/3zXOyBKDG
+CYDQzQD4Ij3KQSQ0ESYj19mWKMQJwGZmoviH0uLNTOdzkZHOEvNpZuaDEgC4VgC+CWZmpg/MzHw7
+ihT7EIC21PlefFZY5AvlEHmWbmrLKYJ/0V8nLgDwPzoj6gAAAZxpVFh0WE1MOmNvbS5hZG9iZS54
+bXAAAAAAADx4OnhtcG1ldGEgeG1sbnM6eD0iYWRvYmU6bnM6bWV0YS8iIHg6eG1wdGs9IlhNUCBD
+b3JlIDUuNC4wIj4KICAgPHJkZjpSREYgeG1sbnM6cmRmPSJodHRwOi8vd3d3LnczLm9yZy8xOTk5
+LzAyLzIyLXJkZi1zeW50YXgtbnMjIj4KICAgICAgPHJkZjpEZXNjcmlwdGlvbiByZGY6YWJvdXQ9
+IiIKICAgICAgICAgICAgeG1sbnM6ZXhpZj0iaHR0cDovL25zLmFkb2JlLmNvbS9leGlmLzEuMC8i
+PgogICAgICAgICA8ZXhpZjpQaXhlbFhEaW1lbnNpb24+MTA3PC9leGlmOlBpeGVsWERpbWVuc2lv
+bj4KICAgICAgICAgPGV4aWY6UGl4ZWxZRGltZW5zaW9uPjc5PC9leGlmOlBpeGVsWURpbWVuc2lv
+bj4KICAgICAgPC9yZGY6RGVzY3JpcHRpb24+CiAgIDwvcmRmOlJERj4KPC94OnhtcG1ldGE+Clae
+6H8AAAwgSURBVHgB7V19cFVHFT/35r2X9xJCCBQSEjAkykeUEr4syGCnrYxOC1LpyPgxA9PhL62i
+zlgYOjhqxxnt1DrAH87YcdB26mCpFmtbp2AVtVpFxsGCNAwt0AoVWhI+kkC+8+I5Z3fvve+RpMnd
+3cdN5m7m5rzzNm/v2d85v3N2910Gx0lUDsAADN0c7Ir7I4GPy45wyCPYBpPkqMHeV38f9xcMHxfv
+hMxBxMkhJGM9snigs8g/AYexmqvH/bl4OHl4FQofx0lU5dYstCunRsV6ZPC4sWbl16BYF5nHy0Ay
+E90EHZk1HZmlahYZgpcsXb6M+0Wqu7n4MLP8HCwcxYs/dqDSVc5WOklyoNLj/lw87OAjmIVjc1OM
+ivVI4iFqFi/X0T5e5ZCdxBRShVR63J+LR6HxQWZVE5/iNgYQEDVLMYsM5lKkIijWo4QHMqsG3RMk
+Fzoq1ilsZYsOHsgscpRgksMy1iOLh2CWiqJYRhkBPhsUjPLN9HVKARRngnnqL3x9lP20usTLcei2
+9JrOkYP6TewPVILQ85MA2fo81qwZaGbAUgKR9XzpuypMf3rpYqj//XNqkMJLTPcDPd0w0N0D2W6U
+Xd3Q13IJ+t59D6+L0Hv+AnSdOAldR49DH77mpkpEAfDxAcnHXekACQKeIoFOc21KdnDWN6nwr3B2
+yTRf7gRx92TNDIDGGy3pO/cOtO1/Gdpf3A/X/n4I3AH7+IwIf8GsGw02/U56yUKo338TmRVyQtn3
+mqFl9xNw+We/gGxra8hRzHxM1CyqJdg415KUOr3D7xvo55GIWWPscqdOhWnbtkDDfw7D9IceBEgV
+W8GHcc7DOx9/qvBi9U4Sf4K6qk2cujX7KcmONUcF7R1IFkPF174Ki44dhpIlixgnk/gw7u+DPzqL
+YSTHyoixozsYBw6yaqxfPWXlUP/bfbBg6zdwMUuJyQ5eg/lDMIt6sPkMsqMHI3Usv85i0PVv/jp8
+7snHMfrkWXgB8KPQ8HJwfs1StcuTlMqCf69qmZLD9VOGzeKvcXS9fvsq2L53N/pL4jLc/Ak3zX68
+zdA1i5hmst9BR42nawDn8+fld8D3Hv0uuyK/5pvGz6WAV4s/j0EiUPh9Y/000BhbCY7E3tbeAejd
+uBHWrF7lZygb+CF8uClWtSpP4g1FDRtChuinxcV4bM+1ZuHZp34Mf61bCq2t7f7ZOAUotkFxDIFf
+bs1StYck3shnGurYcvQQ/eOpXgXnksV0uKcnCbt2POzjFAKf98XXTdYOKM8Lh/iRYFLPNC6E2U8/
+w5MJ86s25UBK5esQA7QjoO39AJ0oKeDpMtkyWP0P1hZBw5yVcPbseW9ojvvAzXT0BBdBSUnyLHlO
+DWhSJ+tprxW27axKQl0q7Kf9z3WiDa91DcDhjizsu9oPbYZSc1c/LjY6AbZtfQC+svlbnPpM4if8
+lJyFoUYOEo5SnjKtly5YBLP37PVRG+WrfeipWeis48fxZBxPzHkVTM6nDD1CSSvb8vIymDKlgmUP
+6k9dycLjLf28lhilSTf8+ScnuvDt8l64pXIhdOPpPqcsGfkm8EwEHaUGtCIJUQNRvP7zD8Abb5xh
+IHTsLCnJwIqPLYFP3LUSHt20Eba3FEG3pn2H2rNQMj0Dn7n3U/D03uc9AujYKTKdIJLLA1GMMLNI
+YIcNHaNYZ48ljDJn3/WOTnj5D3+Dh7Y/Ap+uXwwff/OIln00t3Zcxp/vBVh9z11W8HQ5F1IuQQ+J
+CEBpSR/JvmXIv5FJx4a9XZ3d8Ni6L0D1u2e194InO7Nwz913WsFTMkvWLOExP8WgLpjmS8FAXx9x
+P47lYpoJe1Fp4kZxpWqsSfswo/xpy5bQ9ql5vY2Ll4qKcqirm4nW3YhTaPzQPo9ZDEAOo/BG+KMi
+Wbcf7dY6cVe+4nE4ZZu1j+bXefwYOOf/p2Vncw8XEWhc0GAUP7IPmSUWU+xxRMSaTmhjXg99SW9Z
+s48CAO/R/Oor4W3E+bV0C2fNnftBHs+kvR6zOGIDTLKhq1QRRkpfeUy3YR9lkutNTVqpsBP3W9Rq
+qqtymGXC3oRa/VmXZLrG0tihfExjSAbYktnWq1p29vSxr6C6upL8Y9TehIAgWLQJEtL9lCh0VSxD
+9qPpOs4SEIiUbcU+nDAFQG97m5adfZJZZWWlAkdyGOOpiR/al+CBCAkVsTSwUIWUum6/g49zmXCW
+slfVAqXr2qc+n0jh42oaGaCYDMKWyaSN4kf2SWZRcUXP448tSROgjWPoJj/KgWTRzuSUW7TszFAU
+YUulksbxRGaJVZB1qcksGbASAEotduwurZurxayKImEpnV/6gWXG3jxmqZqgGGZOp2jjr6XphUbz
+AaBMYM4+kVEAJi9eoWXn9GL+ihA68DjLtH2SWXYmngMsKjq1QPnXT9XmHTVhXiOUzqgXR07qhqOU
+NWnBrJaWKwFmmcEXmRWoVbTIoFURpxiURnW9mqW+C7Npb/3GzVr1ivw6D78mofbfs3gSYhQ/Xg0G
+cj9FPztKSsM6bYZ1my37Zq7dAJMX3KbFqhLMU7WlgllnzpzzNvBehtHEU9QsLwJkavF0Wbs8PXw/
+5QQTaZAn7tljwj48bbj7s/ChTd/Utm/5FBdDXbTD/8JzRg78YIYKjx9lPK5ZFALewHQ7K7qms8hL
+2MhOU/YlJlXAnPsfhKo7VovBNZl/eyU/LAZtbdfgRNNpjE+BqzF7eUAVqValnrMoYslfZC8/skwB
+RY8uj1QScPQvLRNJqJi7EKatWAXVd64FFzfBJr7BnoSPHCyfVsROf+nAX/C8OuvXLEO4itUgzR9/
+cN45knEZ5H31d6Ppp7LramyKHzvSBWncw1RuehgmdHQwKKP5VVScgVTZJMhU1qCvBaj8eQ2bgvdf
+84EUJMXaAp7dd4BxHA0+I8E/t2YZigBvFZQznvjiMTjB0bw+eUnkqJK6W6FkNB8c7G81013+kBkM
++XX1SX67ufkyvPDiQfKTBWYhoH4EUKqwp5tIN/lARUH/4pwklMnH5H66+xno6e6VGcosnvjcoBiQ
+UxszgSKCa3heZKhICddPoJpYukfBOUEb5k52Yd1swSpaWOzY9QQCZB4/8o/4PotqFd6AGebdSOmy
+lun24+A6NSsIUFReT8Qj9i3L0vh1u7DoB4/8BC5fxpOLHDwN4Yf3kE/k0oCKYbYkBoThWnEznUYb
+4O+szECV3AT/8/BR+NHOn0tH2cGTmUWTFosCIQXDVESIsNHtp+3ieEmDlRMc2H5HCcycKLChRcWG
++7dAX18/42gDP8I/71l3lWstyXHArHlTXdiGjppYLHhNdere+74Mp06d5VKiUqANiczCm6ocywyz
+pNPYhvY0OFTBGy3P1zemYHVDChJyP/XWW+/A2nVfgqamU6Lmo1U28SxYzaKAMPF9VqG9RLG8sj4B
+G5amoSIj0h6x5h+HjsB96zfDxYuXOPXZr/l0NsihkFurCJCcGiV1lYvD9o+lBUYaDzlWoJPWzE/D
+jEnCSTTv9vbr8H1c9e3Y9ST09OB+qoD45dWsoVYxqoZp9GO9ivICg9xRjOew82uK4KO1SVg2Kwlp
+sX0iH/Fq+Zd7fwdbt/0QLlxozls9G8CHS9Hw+EpmyZ02UkdEinlJj/7SPotPzXn6hf+VRLakkw6k
+0SmluEeaiqu5qolFUFXuQu2UIrxcb8+kHERfz+/91UuwE5n0etOb+Da51Tw+I8HdcVLz6FEWP1LI
+EEv68mUL4dVX9nipo/DuGv6OVHeoXb/eAX88eAief+Eg/Po3B+Bae0dB8OHSMxz+bqpBWDj8PIz1
+LrutkR1mbMAQA9GTR9eudfB15Wob0Kru1OlzcPr023D02En492snoL8f/wFyxBoyq0EwayiPqveV
+xOjLiQD1vpJxvz183NSHkVlELpGLc6UKrbg/FxeFR2Hxkds7rFmew8gApStjlK6WsEqP+wUCCg+7
++DiCWQr0WEYZAXmoQJFBLZZRxgGZ9RFhX5RDKraNERA1C1OtqFkSFdYDCMX9kcAHmTUfmTUcuaho
+xv2B0M17WTh8sGahI+RhJEl2S44e90cFH8msvGCJ1UgiIGuWYpS00WNYrDMCEcHDcYtvxUwYqEmU
+AmPdZ1aE8BD/fxYZRE0ZFuuRxEMyixyFFxEslpHF4f/J0slISFcKAgAAAABJRU5ErkJggg==" rel="icon" type="image/x-icon" />
+
 <head>
 <script src="jquery/jquery-1.7.2.min.js" type="text/javascript"></script>
 <script src="javascript/loadXML.js" type="text/javascript"></script>
