--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body bgcolor="black"><center><a href=""><img src="YVVvko.png"></a>
+<body bgcolor="black"><center><img src="YVVvko.png">
 <div style="float:center;">
 <textarea type="text" id="description" style="background-color:white;" disabled></textarea></div>
 <button onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceA"></button><br><button style='margin-top:1.2vh;' onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceB"></button>
