--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
 <body bgcolor="black"><center><img src="YVVvko.png">
 <div style="float:center;">
 <textarea type="text" id="description" style="background-color:white;" disabled></textarea></div>
-<button onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceA">werwer</button><br><button style='margin-top:1.2vh;' onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceB">sdfsdfsdf</button>
+<button onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceA"></button><br><button style='margin-top:1.2vh;' onClick="reply_click(this.innerHTML,document.getElementById('questions').value)" type="button" id="choiceB"></button>
 <input type='text' id='score' value="0.00000" style="width:90%; background: #fff;" disabled/>
 <input type='hidden' name='questions' id='questions' value='0'>
-<iframe data-aa="1609276" src="//ad.a-ads.com/1609276?size=728x90" scrolling="no" style="border:0px; padding:0; overflow:hidden" allowtransparency="true"></iframe>
 </center>
-
 </body>
 
 </html>
