--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html><title>Droozle - Αυτό ή Εκείνο?</title><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><meta name="description" content="Droozle is a trivia game in which user has to choose between two different answers">
-<meta name="keywords" content="droozle, or game, the or game, conjuction, questions, answers, or questions">
+<meta name="keywords" content="droozle, or game, the or game, conjuction, questions, answers, or questions, trivia games, mobile apps, android games, android development">
 <meta name="viewport" content="width=device-width, height=device-height,  initial-scale=1.0, user-scalable=no, user-scalable=0"/>
+<meta name="robots" content="noindex">
 <link rel="shortcut icon" href="droozle.ico" type="image/x-icon" />
 <head>
 <script src="jquery/jquery-1.7.2.min.js" type="text/javascript"></script>
